deploy/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: camera360
  name: camera360-bff
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  tls:
    - hosts:
        - camera360-bff-dev.camera360.com
      secretName: camera360.com
  rules:
    - host: camera360-bff-dev.camera360.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: camera360-bff
                port:
                  number: 8000
